# dcm-rust

./: docker-compose.yml  run.ps1  run.sh
code-distributor/: Cargo.toml  Config.toml  Dockerfile  cert.pem  key.pem
code-distributor/benches/: wasm_execution_benchmark.rs
code-distributor/benches/resources/wasm/: OrderManager.wasm  factorial.wasm
code-distributor/src/: configuration.rs  lib.rs  main.rs
code-distributor/src/api/: endpoints.rs  middleware.rs  mod.rs
code-distributor/src/client_registry/: client.rs  client_event_listener.rs  mod.rs
code-distributor/src/connection_handler/: jwt.rs  mod.rs
code-distributor/src/fragment_executor/: mod.rs  wasmer.rs  wasmer_runtime.rs  wasmtime.rs
code-distributor/src/fragment_registry/: mod.rs
code-distributor/src/util/: error.rs  mod.rs
decision-system-extension/: decision-system.crx  (+2 more)
runtime-code-mobility-demo/: CFD1.yaml  Cargo.toml  Config.toml  docker-compose.yml  rust_files.json
runtime-code-mobility-demo/src/: configuration.rs  main.rs
runtime-code-mobility-demo/src/controllers/: index_controller.rs
runtime-code-mobility-demo/src/frontend/: index.html  playground.html
runtime-code-mobility-demo/src/frontend/static/js/: Benchmarking.js  CouponForm.js  WasmPlayground.js  index.js  initCodeDistributor.js
runtime-code-mobility-demo/src/routes/: index_routes.rs
runtime-code-mobility-demo/src/shared/: mod.rs  playground1.rs  playground3.rs  playground4.rs
runtime-code-mobility-demo/src/shared/test/: main.rs  mod.rs  stats.rs
runtime-code-mobility-demo/src/shared/webshop/: developer_experience_evaluation.rs
wasm-generator/: .gitignore  Cargo.toml  Config.toml  Dockerfile  docker-compose.yml  entrypoint.sh  readme.md
wasm-generator/benchmarks/: compilation_data_2023-11-19_17-36-35.json  compilation_data_2023-11-19_17-38-44.json  compilation_data_2023-11-19_17-40-42.json  compilation_data_2023-11-19_17-42-18.json  compilation_data_2023-11-20_15-56-44.json  compilation_data_2023-11-25_12-30-29.json  compilation_data_2023-11-25_13-09-05.json  compilation_data_2023-11-26_20-02-38.json  compilation_data_2023-11-27_12-34-15.json  compilation_data_2023-11-27_14-32-19.json  compilation_data_2023-11-27_21-08-52.json  compilation_data_2023-11-27_21-10-43.json  compilation_data_2023-11-27_21-14-50.json  compilation_data_2023-11-27_21-44-15.json
wasm-generator/src/: lib.rs  main.rs
wasm-generator/src/modules/: configuration.rs  constants.rs  error.rs  mod.rs
wasm-generator/src/modules/application/: fragment_type.rs  function_fragment.rs  mod.rs  object_fragment.rs
wasm-generator/src/modules/application/traits/: fragment.rs
wasm-generator/src/modules/cfd_analyzer/: cfd_visitor.rs  mod.rs
wasm-generator/src/modules/cfd_analyzer/traits/: visit.rs
wasm-generator/src/modules/dependency_resolver/: code_appender.rs  crates_resolver.rs  dependency_locator.rs  fragment_dependency_resolver.rs  mod.rs  rust_item_ast_visitor.rs
wasm-generator/src/modules/fragment_compiler/: mod.rs
wasm-generator/src/modules/fragment_generator/: helpers_generator.rs  javascript_wrappers_generator.rs  mod.rs  wasm_wrapper_generator.rs
wasm-generator/src/modules/language_server_protocol/: mod.rs  rust_analyzer.rs
wasm-generator/src/modules/post_compilation_processor/: mod.rs
wasm-generator/src/modules/source_code_analyzer/: ast_visitor.rs  attribute_parser.rs  cargo_toml.rs  mod.rs  rust_file.rs
wasm-generator/src/modules/util/: attribute_parser.rs  file_handler.rs  id_generator.rs  mod.rs
(+95 files in other folders)
