[package]
name = "runtime-code-mobility-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
fastrand = "2.0.0"
figment = { version = "0.10.10", features = ["toml", "env"] }
log = "0.4.19"
env_logger = "0.10.0"
chrono = "0.4.26"
rmp-serde = "1.1.2"
itertools = "0.12.0"